# canopen-stack

./: .clang-format  .editorconfig  .gitignore  Doxyfile  LICENSE  Makefile  README.md  config1.yaml  config2.yaml  doc.md  notes.md  od.cpp  od.eds  od_remote.hpp  pyproject.toml  tasks.md  testSchema.py
canopen-generator/: README.md  __init__.py  __main__.py  generator.md  profiles.yaml  schema.py  type.py
canopen-generator/templates/: config.j2  cpp.j2  (+4 more)
canopen_generator/: README.md  __init__.py  __main__.py  example.yaml  generator.md  git_info.py  phf.py  profiles.yaml  schema.py  tree.py  type.py
example/: Makefile  README.md  can0.sh  example.cpp  example.eds  example.py  od.cpp  od.hpp  od_data.cpp  od_data.hpp  test.cpp  test.py
generator/: __init__.py  __main__.py  eds.py  entry_types.py  example.eds  example.yaml  flat.py  generator.py  object_types.py  od.hpp  od.hpp.template  od_test.hpp  pretty.py  profiles.yaml  requirements.txt  schema.py  sw-motion-lite.yaml  sw-motion.yaml  template.py  test.hpp  test.py  test_generator.py  tree.py  types.py
src/: CANopen.hpp  IObjectDictionnary.hpp  canopen.hpp  common.hpp  emergency.cpp  emergency.hpp  enums.hpp  frame.cpp  frame.hpp  hardware-delay.hpp  hardware-interface.hpp  hardwareInterface.hpp  heartbeat.cpp  heartbeat.hpp  iobject-dictionnary.hpp  monitoring.cpp  monitoring.hpp  nmt.cpp  nmt.hpp  node.cpp  node.hpp  object.cpp  object.hpp  od.cpp  od.hpp  od_classes.hpp  od_common.cpp  od_common.hpp  od_include.hpp  pdo.cpp  pdo.hpp  sdo.cpp  sdo.hpp  sync.cpp  sync.hpp  time.cpp  time.hpp  unions.hpp  units.cpp  units.hpp
sw-motion-generator/: __init__.py  __main__.py  profile.yaml  profiles.yaml  schema.py  type.py
test/: Makefile  od.cpp  od.hpp  od_classes.cpp  od_classes.hpp  od_test.hpp  test.cpp
tests/: test_bitfield_model.py  test_device_info.py  test_enum_models.py  test_identifier.py  test_model_access.py  test_model_array.py  test_model_baudrate.py  test_model_bitfield.py  test_model_datatype.py  test_model_device.py  test_model_domain.py  test_model_enum.py  test_model_file_info.py  test_model_markdown.py  test_model_object_id.py  test_model_object_type.py  test_model_objects.py  test_model_record.py  test_model_types.py  test_model_units.py  test_model_var.py  test_phf.py  test_read_profiles.py  test_schema_config.py  test_schema_profile.py  test_tree.py
(+149 files in other folders)
